...
    genusID: genus.id,
    scientificName: "Solanum lycopersicum",
    commonNames: ["Tomato"]
)
let cultivar = Cultivar(
    speciesID: species.id,
    name: "Brandywine",
    daysToMaturity: 75...85
)
try PlantFamilyRepository(database).insert(family)
try GenusRepository(database).insert(genus)
try SpeciesRepository(database).insert(species)
try CultivarRepository(database).insert(cultivar)
...
